# pattern-miner

./: CMakeLists.txt  log.cpp  log.h  main.cpp  miner.cpp  miner.h
miners/: candleminer.cpp  candleminer.h  iminer.cpp  iminer.h  minmaxminer.cpp  minmaxminer.h  ttminer.cpp  ttminer.h
model/: candle.h  fitelement.h  quotes.cpp  quotes.h
report/: builder.h  htmlreportbuilder.cpp  htmlreportbuilder.h  textreportbuilder.cpp  textreportbuilder.h
